# hri_course_ws_2023

src/chatbot_control/: CMakeLists.txt
src/example_package/: CMakeLists.txt
src/python_example/: Factorial.py  factorial_main.py  simple_example.py
src/python_examples/: Factorial.py  factorial_main.py  simple_python.py
src/service_example/: CMakeLists.txt
src/service_example/scripts/: service_client.py
